k8s/Nginx/producer-ingress-extended.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /service1(/|$)(.*)
            backend:
              serviceName: example-service1
              servicePort: 80
          - path: /service2(/|$)(.*)
            backend:
              serviceName: example-service2
              servicePort: 80
