k8s/Nginx/producer-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: producer-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: rabbitmq-producer-service
              servicePort: 80
            path: /applicationapi(/|$)(.*)
            # path: /applicationapi
#          - backend:
#              serviceName: rabbitmq-producer-service-v2
#              servicePort: 80
#            path: /applicationapiv2(/|$)(.*)
